non_executable_reasons_record_from_random_10k/5740.txt
3.5
An error occurred while executing the following cell:
------------------
dicta = {}
for val in vals:
    dicta[]
------------------

[0;36m  File [0;32m"<ipython-input-2-f4f0537ab870>"[0;36m, line [0;32m3[0m
[0;31m    dicta[][0m
[0m          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-2-f4f0537ab870>, line 3)

Executability                            : False
